--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -48,6 +48,13 @@ jobs:
         path: .xdg
         key: ${{ runner.os }}-nvim-${{ env.NVIM_VERSION }}-ts-${{ env.NVIM_TREESITTER_SHA }}
 
+    - name: Install tree-sitter CLI
+      run: |
+        node --version
+        npm --version
+        sudo npm install -g tree-sitter-cli
+        tree-sitter --version
+
     - name: Install plenary.nvim
       run: |
         git clone https://github.com/nvim-lua/plenary.nvim.git ../plenary.nvim
@@ -61,9 +68,9 @@ jobs:
       run: |
         nvim --headless -u NONE -i NONE \
           -c "set rtp+=../nvim-treesitter" \
-          -c "lua require('nvim-treesitter').install({ 'lua', 'typescript' }):wait(300000)" \
-          -c "lua assert(#vim.api.nvim_get_runtime_file('parser/lua.so', true) > 0, 'lua parser missing after install')" \
-          -c "lua assert(#vim.api.nvim_get_runtime_file('parser/typescript.so', true) > 0, 'typescript parser missing after install')" \
+          -c "lua local ok, err = pcall(function() require('nvim-treesitter').install({ 'lua', 'typescript' }):wait(300000) end); if not ok then vim.api.nvim_err_writeln(err); vim.cmd('cq') end" \
+          -c "lua if #vim.api.nvim_get_runtime_file('parser/lua.so', true) == 0 then vim.api.nvim_err_writeln('lua parser missing after install'); vim.cmd('cq') end" \
+          -c "lua if #vim.api.nvim_get_runtime_file('parser/typescript.so', true) == 0 then vim.api.nvim_err_writeln('typescript parser missing after install'); vim.cmd('cq') end" \
           -c "qa"
 
     - name: Run pr_ready
